--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Cool Website</h1>
         <p>I did it!</p>
+	<img src="../img/yeet.gif" alt="gottem" /> 
     </body>
 </html>
