--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>web</title>
+	h1 {text-align: center;}
+	p {text-align: center;}
+	img {
+  		display: block;
+  		margin-left: auto;
+  		margin-right: auto;
+	}
     </head>
     <body>
         <h1>Cool Website</h1>
