--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>web</title>
+	<style>
 	h1 {text-align: center;}
 	p {text-align: center;}
 	img {
@@ -10,6 +11,7 @@
   		margin-left: auto;
   		margin-right: auto;
 	}
+	</style>
     </head>
     <body>
         <h1>Cool Website</h1>
