--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <h1>Cool Website</h1>
-        <p>I did it!</p>
+        <p>Look at my cool website</p>
 	<img src="../img/yeet.gif" alt="gottem" /> 
     </body>
 </html>
