--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   		margin-right: auto;
 	}
 	</style>
+	<script type="text/javascript">
+        function codeAddress() {
+            var audio = new Audio('audio_file.mp3');
+	    audio.play();
+        }
+        window.onload = codeAddress;
+        </script>
     </head>
     <body>
         <h1>Cool Website</h1>
