--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 	</style>
 	<script type="text/javascript">
         function codeAddress() {
-            var audio = new Audio('audio_file.mp3');
-	    audio.play();
+            alert("Hey");
         }
         window.onload = codeAddress;
         </script>
