--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	</style>
 	<script type="text/javascript">
         function codeAddress() {
-            alert("Hey");
+            var audio = new Audio('audio_file.mp3');
+	    audio.play();
         }
         window.onload = codeAddress;
         </script>
