--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>web</title>
+	<link rel="icon" type="image/x-icon" href="/img/gull.ico">
 	<style>
 	h1 {text-align: center;}
 	p {text-align: center;}
