--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script type="text/javascript">
         function codeAddress() {
             var audio = new Audio('audio_file.mp3');
+	    audio.volume = 0.2;
 	    audio.play();
         }
         window.onload = codeAddress;
