--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>web</title>
+        <title>Kraith's Cool Website</title>
 	<link rel="icon" type="image/x-icon" href="/img/gull.ico">
 	<style>
-	h1 {text-align: center;}
-	p {text-align: center;}
+	body {background-color: #800080;}
+	h1 {text-align: center;
+	    color: #00FF00;}
+	p {text-align: center;
+	    color: #00FF00;}
 	img {
   		display: block;
   		margin-left: auto;
