--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Kraith's Cool Website</title>
+        <title>Kraith's Cool Website!</title>
 	<link rel="icon" type="image/x-icon" href="/img/gull.ico">
 	<style>
 	body {background-color: #800080;}
