--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	    color: #00FF00;}
 	p {text-align: center;
 	    color: #00FF00;}
+	h2 { text-align: left;
+	    color: #e0b0ff;}
 	img {
   		display: block;
   		margin-left: auto;
@@ -21,5 +23,9 @@
         <h1>Cool Website</h1>
         <p>Look at my cool website</p>
 	<img src="../img/yeet.gif" alt="gottem" />
+	<br>
+	<br>
+	<h2>Scott Morrison Approved!</h2>
+	<img src="../img/scomo.jpg" alt="scomo" />
     </body>
 </html>
