--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<img src="../img/yeet.gif" alt="gottem" />
 	<br>
 	<br>
-	<h2>Scott Morrison Approved!</h2>
-	<img src="../img/scomo.jpg" alt="scomo" />
+	<h2>             Scott Morrison Approved!</h2>
+	<img src="../img/scomo.jpg" alt="scomo" width="200" height="198" />
     </body>
 </html>
