--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	    color: #00FF00;}
 	p {text-align: center;
 	    color: #00FF00;}
-	h2 { text-align: left;
+	h2 { text-align: right;
 	    color: #e0b0ff;}
 	img {
   		display: block;
@@ -26,6 +26,6 @@
 	<br>
 	<br>
 	<h2>Scott Morrison Approved!</h2>
-	<img src="../img/scomo.jpg" alt="scomo" width="100" height="99" alight="left" />
+	<img src="../img/scomo.jpg" alt="scomo" width="100" height="99" alight="right" />
     </body>
 </html>
