--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 	<br>
 	<br>
 	<h2>Scott Morrison Approved!</h2>
-	<img src="../img/scomo.jpg" alt="scomo" width="100" height="99" alight="right" />
+	<img src="../img/scomo.jpg" alt="scomo" width="100" height="99" align="right" />
     </body>
 </html>
