--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
   		margin-left: auto;
   		margin-right: auto;
 	}
+	#bottom {
+    		position: fixed; 
+    		background:gray; 
+    		width:100%;
+    		bottom:0;
+	}
 	</style>
+
     </head>
     <body>
         <h1>Cool Website</h1>
@@ -25,7 +32,12 @@
 	<img src="../img/yeet.gif" alt="gottem" />
 	<br>
 	<br>
+	
+
+	<div id="bottom"> 
 	<h2>Scott Morrison Approved!</h2>
 	<img src="../img/scomo.jpg" alt="scomo" width="100" height="99" align="right" />
+	</div>
+	
     </body>
 </html>
