--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	}
 	#bottom {
     		position: fixed; 
-    		background:gray; 
+    		background:#800080; 
     		width:100%;
     		bottom:0;
 	}
@@ -35,7 +35,7 @@
 	
 
 	<div id="bottom"> 
-	<h2>Scott Morrison Approved!</h2>
+	<h2>Scott Morrison Approved! </h2>
 	<img src="../img/scomo.jpg" alt="scomo" width="100" height="99" align="right" />
 	</div>
 	
