--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	
 
 	<div id="bottom"> 
-	<h2>Scott Morrison Approved! </h2>
+	<h2>Scott Morrison Approved!    !</h2>
 	<img src="../img/scomo.jpg" alt="scomo" width="100" height="99" align="right" />
 	</div>
 	
