--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     </head>
     <body>
-        <h1>Cool Website</h1>
+        <h1 style="font-size:300%;">Cool Website</h1>
         <p>Look at my cool website</p>
 	<img src="../img/yeet.gif" alt="gottem" />
 	<br>
