--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <title>Kraith's Cool Website!</title>
 	<link rel="icon" type="image/x-icon" href="/img/gull.ico">
 	<style>
-	body {background-color: #800080;}
+	body {
+	   background-image: url("../img/back.gif");
+	  background-color: #800080;
+	}
 	h1 {text-align: center;
 	    color: #00FF00;}
 	p {text-align: center;
