--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     		background:#800080; 
     		width:100%;
     		bottom:0;
+		background-image: url("../img/scomo.jpg");
 	}
 	</style>
 
@@ -39,7 +40,6 @@
 
 	<div id="bottom"> 
 	<h2>Scott Morrison Approved!    !</h2>
-	<img src="../img/scomo.jpg" alt="scomo" width="100" height="99" align="right" />
 	</div>
 	
     </body>
