--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	    color: #00FF00;}
 	p {text-align: center;
 	    color: #00FF00;}
-	h2 { text-align: right;
+	h2 { text-align: center;
 	    color: #e0b0ff;}
 	img {
   		display: block;
@@ -39,7 +39,7 @@
 	
 
 	<div id="bottom"> 
-	<h2>Scott Morrison Approved!    !</h2>
+	<h2 style="font-size:300%;">Scott Morrison Approved!    !</h2>
 	</div>
 	
     </body>
