--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	
 
 	<div id="bottom"> 
-	<h2 style="font-size:300%;">Scott Morrison Approved!    !</h2>
 	<br>
+	<h2 style="font-size:300%;">Scott Morrison Approved!</h2>
 	<br>
 	<br>
 	</div>
