--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	p {text-align: center;
 	    color: #00FF00;}
 	h2 { text-align: center;
-	    color: #e0b0ff;}
+	    color: #e0b0ff;
+	    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;}
 	img {
   		display: block;
   		margin-left: auto;
