--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   		margin-right: auto;
 	}
 	#bottom {
+		left:0px; right:0px;
     		position: fixed; 
     		background:#800080; 
     		width:100%;
