--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
     </head>
     <body>
-        <h1 style="font-size:300%;">Cool Website</h1>
-        <p>Look at my cool website</p>
-	<img src="../img/yeet.gif" alt="gottem" />
+        <h1 style="font-size:300%;">Kraith's Epic Website</h1>
+        <p>Here We Only Take Victory Royales</p>
+	<img src="../img/running.gif" alt="he ran away" />
 	<br>
 	<br>
 	
