--- a/page2.html
+++ b/page2.html
@@ -34,21 +34,6 @@
 
     </head>
     <body>
-        <h1 style="font-size:300%;">Kraith's Epic Website</h1>
-        <p>Here We Only Take Victory Royales</p>
-	<a href="page2.html">
-	<img src="../img/running.gif" alt="he ran away" />
-	</a>
-	<br>
-	<br>
-	
-
-	<div id="bottom"> 
-	<br>
-	<h2 style="font-size:300%;">Scott Morrison Approved!</h2>
-	<br>
-	<br>
-	</div>
-	
+        <h1 style="font-size:300%;">Secret Tunnel</h1>
     </body>
 </html>
