--- a/secrettunnel.html
+++ b/secrettunnel.html
@@ -8,6 +8,7 @@
 	body {
 	  background-color: #800080;
 	}
+	iframe {text-align: center;}
 	h1 {text-align: center;
 	    color: #00FF00;}
 	p {text-align: center;
