--- a/secrettunnel.html
+++ b/secrettunnel.html
@@ -8,7 +8,8 @@
 	body {
 	  background-color: #800080;
 	}
-	iframe {text-align: center;}
+	iframe {display: block;
+    		border-style:none;}
 	h1 {text-align: center;
 	    color: #00FF00;}
 	p {text-align: center;
