--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <body>
         <h1 style="font-size:300%;">Kraith's Epic Website</h1>
         <p>Here We Only Take Victory Royales</p>
-	<a href="secrettunnel">
+	<a href="webmd">
 	<img src="../img/running.gif" alt="he ran away" />
 	</a>
 	<br>
