--- a/webmd.html
+++ b/webmd.html
@@ -133,7 +133,7 @@ font-size:20;
 </select>
 <br>
 <br>
-<input id="submit" type="submit" value="Submit" onclick="calculateHurt();">
+<input id="submit" type="submit" value="Submit" onclick="calculateHurt(); return false;">
 </form>
 
 
