--- a/webmd.html
+++ b/webmd.html
@@ -16,10 +16,6 @@
 			case "Head":
 			headChosen();
 			break;
-
-			case "Leukemia":
-			alert("Blood Cancer");
-			break;
 			
 			case "Skin":
 			alert("Australian Moment");
@@ -118,7 +114,7 @@ font-size:20;
 <select name="health" id="health1">
 <option value="choose">Select</option>
 <option value="Bladder">Bladder</option>
-<option value="Leukemia">Leukemia</option>
+<option value="Blood">Leukemia</option>
 <option value="Bone">Bone</option>
 <option value="Breast">Breast</option>
 <option value="Crotch">Crotch</option>
