--- a/webmd.html
+++ b/webmd.html
@@ -2,6 +2,7 @@
 <head>
 
 <title>Kraith's WebMD</title>
+<link rel="icon" type="image/x-icon" href="/img/gull.ico">
 
 <script>
 	function calculateHurt() {
